objects/User.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <description>Used to define the area that a user works in. If a user works in more then 1 area, their primary area should be defined by this value. This is used as part of a trigger on Case to default the area when creating a new case based on the user.</description>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APAC - Application Engineering</fullName>
                </value>
                <value>
                    <fullName>APAC - Pilot Engineering</fullName>
                </value>
                <value>
                    <fullName>APAC - Technical Evangelist</fullName>
                </value>
                <value>
                    <fullName>AU - Application Engineering</fullName>
                </value>
                <value>
                    <fullName>AU - Customer Support</fullName>
                </value>
                <value>
                    <fullName>AU - Install</fullName>
                </value>
                <value>
                    <fullName>AU - Pilot Engineering</fullName>
                </value>
                <value>
                    <fullName>AU - Revenue Accounting and Controls</fullName>
                </value>
                <value>
                    <fullName>AU - Sales</fullName>
                </value>
                <value>
                    <fullName>AU - Technical Support</fullName>
                </value>
                <value>
                    <fullName>BNL - Application Engineering</fullName>
                </value>
                <value>
                    <fullName>BNL - Customer Support</fullName>
                </value>
                <value>
                    <fullName>BNL - Install</fullName>
                </value>
                <value>
                    <fullName>BNL - Pilot Engineering</fullName>
                </value>
                <value>
                    <fullName>BNL - Revenue Accounting and Controls</fullName>
                </value>
                <value>
                    <fullName>BNL - Sales</fullName>
                </value>
                <value>
                    <fullName>BNL - Technical Support</fullName>
                </value>
                <value>
                    <fullName>Business Applications</fullName>
                </value>
                <value>
                    <fullName>CH - Application Engineering</fullName>
                </value>
                <value>
                    <fullName>CH - Customer Support</fullName>
                </value>
                <value>
                    <fullName>CH - Install</fullName>
                </value>
                <value>
                    <fullName>CH - Pilot Engineering</fullName>
                </value>
                <value>
                    <fullName>CH - Revenue Accounting and Controls</fullName>
                </value>
                <value>
                    <fullName>CH - Sales</fullName>
                </value>
                <value>
                    <fullName>CH - Technical Support</fullName>
                </value>
                <value>
                    <fullName>CN - Application Engineering</fullName>
                </value>
                <value>
                    <fullName>CN - Customer Support</fullName>
                </value>
                <value>
                    <fullName>CN - Install</fullName>
                </value>
                <value>
                    <fullName>CN - Pilot Engineering</fullName>
                </value>
                <value>
                    <fullName>CN - Revenue Accounting and Controls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Customer Portal Field</description>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Direct_Report_Role__c</fullName>
        <description>Fields will be populated on Manager&apos;s user records to have direct report to default role if automated process will not be able to detect it.</description>
        <label>Default Direct Report Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disclosure__c</fullName>
        <label>Disclosure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_Signature__c</fullName>
        <label>Email Template Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Role__c</fullName>
        <inlineHelpText>Denotes what role a user plays on a Sales Territory Team.  Used for Oppty assignment and to support collaboration among team members.</inlineHelpText>
        <label>Functional Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inside Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Inside Sales Rep non primary</fullName>
                </value>
                <value>
                    <fullName>National Account Sales Specialist</fullName>
                </value>
                <value>
                    <fullName>Product Overlay Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Sales Development Rep</fullName>
                </value>
                <value>
                    <fullName>Sales Maintenance Rep</fullName>
                </value>
                <value>
                    <fullName>Sales Maintenance Rep non primary</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Sales Rep Primary</fullName>
                </value>
                <value>
                    <fullName>Sales Specialist</fullName>
                </value>
                <value>
                    <fullName>Sales Support Manager</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Application Engineer</fullName>
                </value>
                <value>
                    <fullName>Pilot Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Vetted_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set Account Industry Vetted Login/Date only when industry updated by the authorized users</description>
        <label>Industry Vetted Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Test_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will be set on the user records created from the Test classes. Also will be used in the process builder to opt out  user records with checked flag.</description>
        <label>Is Test User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Role__c</fullName>
        <description>This field is used to assign a knowledge publishing role to a user.  This is used as part of the approval process for publishing.  This role / attribute is defined by the business management on a per-user basis.</description>
        <inlineHelpText>This field is used to assign a knowledge publishing role to a user.  This is used as part of the approval process for publishing.  This role / attribute is defined by the business management on a per-user basis.</inlineHelpText>
        <label>Knowledge Publishing Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Candidate</fullName>
                </value>
                <value>
                    <fullName>Contributor</fullName>
                </value>
                <value>
                    <fullName>Publisher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastDateInCurrentRole__c</fullName>
        <description>The field will be populated based on the manager&apos;s request to keep person active during the transitioning period before person will be moved to a different role/area/profile.</description>
        <label>LastDateInCurrentRole</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date__c</fullName>
        <description>The field will be populated based on the manager&apos;s request to keep person active during the transitioning period before person is inactivated in SF</description>
        <label>Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Department_Name__c</fullName>
        <description>For CJK users</description>
        <label>Local Department Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Full_Name__c</fullName>
        <description>For CJK users only</description>
        <label>Local Full Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Job_Title__c</fullName>
        <description>For CJK users</description>
        <label>Local Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MW_Department__c</fullName>
        <inlineHelpText>New users created only for the departments listed in the picklist</inlineHelpText>
        <label>MW Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MW_Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MW_Office__c</fullName>
        <description>MW Office - HR Employee Office</description>
        <inlineHelpText>HR Employee Office</inlineHelpText>
        <label>MW Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MW_Office</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MathWorks_Employee_ID__c</fullName>
        <externalId>true</externalId>
        <label>MathWorks Employee ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Service_RAC_user__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag should be checked for any users who will not actively work on cases(AE/PE, sales)
This field will be used in Area validation rule to enforce area on Case creation for these users</description>
        <label>Non Service/RAC user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_Master_Id__c</fullName>
        <description>Person Master Id, populated by Informatica job</description>
        <inlineHelpText>Person Master Id</inlineHelpText>
        <label>Person Master Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_User_Status__c</fullName>
        <label>Portal User Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_User_ID__c</fullName>
        <description>This field calculates the 18 characters long User Salesforce ID</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Salesforce User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_User_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel User ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer Portal Field</description>
        <label>Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Currency__c</fullName>
        <description>Copy of the OOB user default currency value. Field populated by the process builder when new record is created or user currency updated by the system admin or user from the personal setting</description>
        <label>User Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by informatica job - HR Manager flag. When flag is set , the email notification has to be sent to the sfdc admin group to create new role,direct report role, dashboard for TS managers</description>
        <inlineHelpText>HR Flag</inlineHelpText>
        <label>is Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_e2a__Email_Html_Body__c</fullName>
        <description>Stores html body of email to be accessed in SF templates.</description>
        <label>Last Email Html Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ortoo_e2a__Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ortoo_e2a__Email_Text_Body__c</fullName>
        <description>Stores text body of email to be accessed in SF templates.</description>
        <label>Last Email Text Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AMB_Set_Email_Notifications_List_1</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>JZaalber</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>MReal</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>MHarfaou</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>FNakahat</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>THatcher</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>LLedenva</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>MAsaduzz</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>TedWood</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>BLaguna</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>LSarasso</value>
        </filters>
        <label>AMB Set Email Notifications List 1</label>
    </listViews>
    <listViews>
        <fullName>AMB_Set_Email_Notifications_List_2</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>ckrenc</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>MaiSeki</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>RYamoto</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>JKato</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>AAoki</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>EKageyam</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>yishide</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>afermeli</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>lackley</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>KWatanab</value>
        </filters>
        <label>AMB Set Email Notifications List 2</label>
    </listViews>
    <listViews>
        <fullName>AMB_Set_Email_Notifications_List_3</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>dplumb</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>GLandare</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>fnakahat</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>YAndrade</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>MTrachte</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>niacono</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>ryamoto</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>mkobayas</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>iseifert</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>mbuller</value>
        </filters>
        <label>AMB Set Email Notifications List 3</label>
    </listViews>
    <listViews>
        <fullName>AMB_Set_Email_Notifications_List_4</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>FrMartin</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>HoonSeo</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>MAn@mathworks</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>ISeifert</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>DDingema</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>KApfelbe</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>NDabesta</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>MYang</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>Michanel</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>SMikkola</value>
        </filters>
        <label>AMB Set Email Notifications List 4</label>
    </listViews>
    <listViews>
        <fullName>AMB_Set_Email_Notifications_List_5</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>FBraeuel</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>MPerono</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>CEgusqui</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>SConstan</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>FSarmien</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>GGoggi</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>MWerndli</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>MKarrasc</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>IRose</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>EAlam</value>
        </filters>
        <label>AMB Set Email Notifications List 5</label>
    </listViews>
    <listViews>
        <fullName>ActivePortalUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>b</value>
        </filters>
        <label>Active Portal Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_Cloud_Sherpas_Staff</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>@cloudsherpas.com</value>
        </filters>
        <label>Active Cloud Sherpas Staff</label>
    </listViews>
    <listViews>
        <fullName>Active_MathWorks_Staff_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active MathWorks Staff Users</label>
    </listViews>
    <listViews>
        <fullName>Active_users_excluding_portal_users1</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Active users excluding portal users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>All_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Ann_New_Hires_Active_Users</fullName>
        <booleanFilter>1 AND 2 AND 3 and (4 or 5)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>MW Sales Standard User</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Rep</value>
        </filters>
        <label>* New Hire records last 30 days</label>
        <sharedTo>
            <role>Sales_Ops</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CJK_Employee_Record</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>JP,KR,CN</value>
        </filters>
        <filters>
            <field>Local_Full_Name__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>* CJK Employee Record</label>
        <language>en_US</language>
        <sharedTo>
            <role>Sales_Ops</role>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>